# VM

./: certificate.crt  private.key
5gnav/: DJI-SDK.7z  read.md
5gnav/rust-backend/: Cargo.toml
5gnav/rust-backend/src/: logger.rs  main.rs  recieve.rs  send.rs  utils.rs  workspace.code-workspace
