[package]
name = "rust-backend"
version = "0.1.0"
authors = ["Alex <alex.vanzuidenrylander1@t-mobile.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = { version = "0.4", default-features = false }
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lru_time_cache = "0.11.3"
reqwest = { version = "0.11", features = ["json","blocking",] }
# Added due to reqwest dependency problems when cross-compiling for RPi
openssl = { version = "0.10.32", features = ["vendored"] } # comment out this line when testing, vendored doesn't work on windows.